--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.18.0
   provider: ^6.1.2
   flutter_slidable: ^4.0.0
+  supabase_flutter: ^2.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
